--- a/Changes.org
+++ b/Changes.org
@@ -15,6 +15,27 @@
 
 ** Details
 
+*** New properties for customizing subtree export.
+When exporting a subtree by selecting it before calling the
+export command, you can now use the properties =EXPORT_TITLE=,
+=EXPORT_TEXT=, and =EXPORT_OPTIONS= to overrule the global
+=#+TITLE=, =#+TEXT=, and =#+OPTIONS= settings.  You can also the
+an export file name with =EXPORT_FILE_NAME= that will overrule
+the file name derived from the buffers file name.  As far as the
+options are concerned, the global =#+OPTIONS= will still be read,
+and only the options you give in the property will be
+overwritten.  For example:
+
+#+begin_src org
+,#+OPTIONS: skip:nil
+,* Computer Tricks
+,  :PROPERTIES:
+,  :EXPORT_FILE_NAME: ct.html
+,  :EXPORT_TITLE: Steve's collected computer tricks
+,  :EXPORT_OPTIONS: h:2 toc:nil
+,  :END:
+#+end_src
+ 
 *** The default of the variable `org-tags-match-list-sublevels' is now `t'.
     The main reason for this is that it is easier to explain in
     the manual and will lead to fewer surprises.
